DFHack future

DFHack 0.40.13-r1
    Internals:
        - unified spatter structs
        - added ruby df.print_color(color, string) method for dfhack console
    Fixes:
        - no more -e after terminating

DFHack 0.40.12-r1
    Fixes:
        - possible crash fixed for hack-wish
        - updated search to not conflict with BUILDJOB_SUSPEND
        - workflow: job_material_category -> dfhack_material_category

    New plugins:
        - hotkeys (by Falconne): Shows ingame viewscreen with all dfhack keybindings active in current mode.
        - automelt: allows marking stockpiles for automelt (i.e. any items placed in stocpile will be designated for melting)

    Misc Improvements:
        - now you can use @ to print things in interactive Lua with subtley different semantics
        - optimizations for stockpiles for autotrade and stockflow
        - updated exportlegends.lua to work with new maps, dfhack 40.11 r1+

    Internals:
        - support for global onLoadWorld.init and onUnloadWorld.init files,
          called when loading and unloading a world
        - Close file after loading a binary patch.

DFHack 0.40.11-r1

    Internals:
        - Plugins on OS X now use ".plug.dylib" as an extension instead of ".plug.so"
    Fixes:
        - 3dveins should no longer hang/crash on specific maps
        - Fixed some autotrade and search layout issues
        - Updated deathcause
        - hack-wish should work now
        - reveal no longer allocates data for nonexistent map blocks
        - Various documentation fixes and updates

DFHack v0.40.10-r1

A few bugfixes.

DFHack v0.40.08-r2

    Internals:
        supported per save script folders
        Items module: added createItem function
        Sorted CMakeList for plugins and plugins/devel
        diggingInvaders no longer builds if plugin building is disabled
        EventManager:
            EQUIPMENT_CHANGE now triggers for new units
            new events:
                ON_REPORT